refactor: revert original getter logic